--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,46 +1,47 @@
 *{
-margin: o;
+margin: 0;
 padding: 0;
 }
 
 .words{
 display: flex;
+
 }
 .more-words{
-    background-color: black;
+    background-color:black;
     width: 50%;
-    height: 30vh;
+    height: 40vh;
     margin-top: 63px;
 }
 .words2{
     background-color: black;
     width: 50%;
-    height: 30vh;
+    height: 40vh;
     margin-top: 63px;
 
 }
 .more-words h3{
-    font-size: 20px;
+    font-size: 30px;
     color: white;
     margin-top: 30px;
     margin-left: 20px;
 }
 .more-words h4{
 color: white;
-font-size: 15px;
-margin-top: 10px;
+font-size: 20px;
+margin-top: -5px;
 margin-left: 20px;
 }
 .more-words h5{
     color: white;
-    font-size: 15px;
-    margin-top: 10px; 
+    font-size: 20px;
+    margin-top: -5px; 
     margin-left: 20px;
 }
 .more-words h6{
     color: white;
-    font-size: 15px;
-    margin-top: 10px; 
+    font-size: 20px;
+    margin-top: -5px; 
     margin-left: 20px;
 }
 .words2 h2{
@@ -71,14 +72,14 @@ margin-left: 20px;
 .icons{
     color:blue;
     font-size:40px;
-    margin-top: 4px;
+    margin-top: -2px;
 margin-left: 10px;
 }
 .icons2{
 
     color: blue;
     font-size:40px;
-    margin-top: 4px;
+    margin-top: -2px;
     margin-left: 10px;
 
 }
@@ -88,6 +89,11 @@ margin-left: 10px;
 .icons3{
     color: blue;
     font-size:40px;
-    margin-top: 4px;
+    margin-top: -2px;
     margin-left: 10px;
+}
+.words2 p{
+    color: blue;
+    font-size: 20px;
+    margin-left: 30px;
 }
