--- a/src/components/home-layout.css
+++ b/src/components/home-layout.css
@@ -80,7 +80,7 @@ font-size: 30px;
 .contactus2{
     width: 70%;
     height: 80vh;
-    background-color:rgba(255, 255, 255, 0.322);
+    background-color:black;
     margin-left: 100px;
     margin-top: 18px;
     border-radius: 30px;
@@ -96,12 +96,12 @@ color: black;
     font-size: 30px;
 }
 .contactus3 h3{
-    font-size: 35px;
+    font-size: 25px;
     margin-left: 300px;
     margin-top: 30px;
 }
 .contactus3 h4{
-    font-size: 30px;
+    font-size: 25px;
     margin-left: 250px;
     margin-top: 30px;
 }
